--- a/BroLake.Cloudflare.Identity.csproj
+++ b/BroLake.Cloudflare.Identity.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageProjectUrl>https://github.com/brolakehub/cloudflare-identity-dotnet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/brolakehub/cloudflare-identity-dotnet</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
